Refactor: 카드 매칭 규칙을 순수 CardMatchEngine으로 분리(이중 피뺏기 중복 버그 수정, 규칙 단위 테스트 추가)